# NovaEngine

./: AUTHORS  Makefile.am  Makefile.in  Nova.sln  README  configure  configure.in  nova-config.in  nova_code_blocks.workspace
Examples/: Makefile.am  Makefile.in
Examples/3dsSceneBuilder/: 3dsSceneBuilder.vcproj  Makefile.am
Examples/3dsSceneBuilder/src/: scene_builder.cpp
Examples/ImageSample/: ImageSample.cbp  ImageSample.layout  ImageSample.vcproj
Examples/ImageSample/src/: image_sample_main.cpp
Examples/Parser/: Makefile.am  Parser.cbp  Parser.layout  Parser.vcproj
Examples/Parser/src/: Makefile.in  parser_example_main.cpp
Examples/ResourcePacker/: Makefile.am  Makefile.in  ResourcePacker.cbp  ResourcePacker.vcproj
Examples/ResourcePacker/src/: Makefile.am  resource_packer.cpp
Examples/SceneBuilder/: Makefile.am  SceneBuilder.vcproj
Examples/SceneBuilder/src/: Makefile.am  scene_builder.cpp
Examples/SimpleWin/: Makefile.am  Makefile.in  SimpleWin.cbp  SimpleWin.layout  SimpleWin.vcproj
Examples/SimpleWin/include/: Makefile.am  Makefile.in  simple_win_example_events.h
Examples/SimpleWin/src/: Makefile.am  Makefile.in  simple_win_example_events.cpp  simple_win_example_main.cpp
Examples/include/: Makefile.am  Makefile.in  nova_common_include.h  nova_example_application.h
NovaEditor/: NovaEditor.cbp  NovaEditor.vcproj
data/: Makefile.am  Makefile.in  config.xml  nova.config  valgrind_run.sh
nova/: Makefile.am  Makefile.in  UpgradeLog.XML  nova.cbp  nova.layout  nova.vcproj  nova_resource.h  res.aps  res.rc  vc90.idb
nova/icons/Scificons/: 1.cur  WNormal.cur
nova/include/: Doxyfile  Makefile.am  Makefile.in  nova_3ds_loader.h  nova_ase_loader.h  nova_base.h  nova_basic_scene_manager.h  nova_basic_tree_scene_manager.h  nova_bounding_box.h  nova_buffers.h  nova_camera.h  nova_color.h  nova_common_allocator.h  nova_configloader.h  nova_console.h  nova_content_loader.h  nova_cpu_timer.h  nova_devil_codec.h  nova_display_list.h  nova_engine.h  nova_error.h  nova_event_listener.h  nova_events.h  nova_fonts.h  nova_formats.h  nova_frustum.h  nova_fstream.h  nova_glsupport.h  nova_gui_base.h  nova_gui_renderer.h  nova_gzstreams.h  nova_hardware_buffer.h  nova_hardware_pixel_buffer.h  nova_hardware_texture_buffer.h  nova_hardware_vertex_buffer.h  nova_image_codecs.h  nova_images.h  nova_lenear_scene_manager.h  nova_log.h  nova_material.h  (+53 more)
nova/include/config/: Makefile.am  Makefile.in  config.h.in  winconfig.h
nova/include/sys/: Makefile.am  Makefile.in  nova_ogl.h  nova_system.h
nova/includex/: ft2build.h
nova/includex/freetype/: ftbbox.h  ftglyph.h  ftimage.h  ftoutln.h  ftstroke.h  ftwinfnt.h
nova/includex/libxml/: xmlversion.h
nova/src/: .directory  Makefile.am  Makefile.in  nova_3ds_loader.cpp  nova_ase_loader.cpp  nova_base.cpp  nova_basic_scene_manager.cpp  nova_basic_tree_scene_manager.cpp  nova_bounding_box.cpp  nova_buffers.cpp  nova_camera.cpp  nova_color.cpp  nova_common_allocator.cpp  nova_configloader.cpp  nova_console.cpp  nova_content_loader.cpp  nova_cpu_timer.cpp  nova_devil_codec.cpp  nova_display_list.cpp  nova_engine.cpp  nova_error.cpp  nova_event_listener.cpp  nova_events.cpp  nova_fonts.cpp  nova_formats.cpp  nova_frustum.cpp  nova_fstream.cpp  nova_glsupport.cpp  nova_gui_base.cpp  nova_gui_renderer.cpp  nova_gzstreams.cpp  nova_hardware_buffer.cpp  nova_hardware_pixel_buffer.cpp  nova_hardware_texture_buffer.cpp  nova_hardware_vertex_buffer.cpp  nova_image_codecs.cpp  nova_images.cpp  nova_lenear_scene_manager.cpp  nova_log.cpp  nova_malloc.c.h  (+52 more)
