#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
dnl AC_INIT does not take a macro as a version nr

AC_INIT([NovaEngine],[1.0.0],[SiriusNick@gmail.com])

AC_CANONICAL_TARGET
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE([NovaEngine], 1.0.0)
AC_CONFIG_HEADERS([nova/include/config/config.h])
AC_CONFIG_SRCDIR([nova/src/nova_engine.cpp])
#AC_CONFIG_HEADER([config.h])

AC_SUBST(PACKAGE_VERSION)
AC_SUBST(PACKAGE_NAME)

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_CC_C_O
AC_LANG_CPLUSPLUS
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_C_INLINE
AC_C_VOLATILE

# Checks for libraries.
AC_CHECK_LIB(SDL, SDL_Init, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(GL, glMatrixMode, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(GLEW, main, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(z, gzopen, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(freetype, FT_Init_FreeType, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(pthread, pthread_create, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(xml2, xmlInitParser, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(IL, ilGenImages, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(ILU, main, , AC_MSG_ERROR([Can not find libs]))
AC_CHECK_LIB(ILUT, main, , AC_MSG_ERROR([Can not find libs]))

NOVA_INCLUDE_DIRS="-I/usr/include/SDL -I/usr/include/freetype2 -I/usr/include -I/usr/include/IL -I/usr/include/libxml2 -I/usr/include/GL"
AC_SUBST(NOVA_INCLUDE_DIRS)
AC_SUBST(LIBS)
CPPFLAGS=$NOVA_INCLUDE_DIRS

# Checks for header files.
AC_PATH_X
AC_FUNC_ALLOCA
AC_HEADER_STDC
AC_CHECK_HEADERS(arpa/inet.h fcntl.h inttypes.h limits.h malloc.h memory.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h strings.h sys/socket.h sys/time.h unistd.h wchar.h GL/glew.h SDL/SDL.h GL/glu.h pthread.h zlib.h IL/il.h libxml2/libxml/tree.h, , AC_MSG_ERROR([Can not fing headers..]))

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([atexit gethostbyname memset socket sqrt strstr itoa atoi])

AC_CONFIG_FILES([Makefile
 nova/Makefile
 nova/src/Makefile
 nova/include/Makefile
 nova/include/sys/Makefile
 nova/include/config/Makefile
 Examples/Makefile
 Examples/SimpleWin/Makefile
 Examples/SimpleWin/src/Makefile
 Examples/SimpleWin/include/Makefile
 Examples/Parser/Makefile
 Examples/Parser/src/Makefile
 Examples/include/Makefile
 data/Makefile
 nova-config])
AC_OUTPUT

echo "Configuration:"
echo "	Version:				 $PACKAGE_VERSION"
echo "  Build  system type:      $build"
echo "  Host   system type:      $host"
echo "  Headers will be installed in $includedir/nova"
echo "  Libraries will be installed in $libdir"
echo "  Building in directory    $abs_builddir"

