libnova_la_includedir = $(includedir)/nova
INCLUDE_SUBDIRS = config sys

SUBDIRS = $(INCLUDE_SUBDIRS)
EXTRA_DIST = Doxyfile

noinst_HEADERS = nova_wgl_support.h \
	nova_win32_context.h nova_win32_workspace.h

libnova_la_include_HEADERS =  nova_mesh_box.h \
nova_mesh_loader.h            nova_movable_object.h \
nova_object_constructor.h     nova_object.h \
nova_3ds_loader.h \
nova_allocator.h              nova_parser.h \
nova_base.h                   nova_plane.h \
nova_bounding_box.h           nova_quaternion.h \
nova_camera.h                 nova_renderable_object.h \
nova_color.h                  nova_render_system.h \
nova_configloader.h           nova_render_target.h \
nova_console.h                nova_render_window.h \
nova_cpu_timer.h              nova_resource_manager.h \
nova_devil_codec.h            nova_scene_manager.h \
nova_display_list.h           nova_sdl_support.h \
nova_engine.h                 nova_sdl_workspace.h \
nova_error.h                  nova_singelton.h \
nova_event_listener.h         nova_smart_ptr.h \
nova_events.h                 nova_sockets.h \
nova_fonts.h                  nova_sphere.h \
nova_formats.h                nova_stable_precompiled_headers.h \
nova_frustum.h                nova_static_object.h \
nova_glsupport.h              nova_streams.h \
nova_gui_base.h               nova_string_utils.h \
nova_gui_renderer.h           nova_texture_manager.h \
nova_gzstreams.h              nova_textures.h \
nova_hardware_buffer.h        nova_threads.h \
nova_hardware_pixel_buffer.h  nova_tree.h \
nova_image_codecs.h           nova_unicode.h \
nova_images.h                 nova_vector2d.h \
nova_lenear_scene_manager.h   nova_vector3d.h \
nova_log.h                    nova_vector4d.h \
nova_material.h               nova_viewport.h \
nova_math.h \
nova_matrix2d.h \
nova_matrix3d.h \
nova_matrix4d.h \
nova_memory.h

