INCLUDES = -I$(top_builddir)/nova/include -I$(top_builddir)/Examples/include -I$(top_builddir)/Examples/SimpleWin/include
noinst_PROGRAMS = SimpleWin

SimpleWin_SOURCES = simple_win_example_events.cpp simple_win_example_main.cpp
SimpleWin_LDFLAGS = -L$(top_builddir)/nova/src
SimpleWin_LDADD = -lnova
